log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345 # Port on which the service will be available within the cluster
      protocol: TCP
      targetPort: 8080 # Must match the PORT of the container
