log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
        - path: /logs       # endpoint 
          pathType: Prefix
          backend:
            service:
              name: logoutput-svc
              port:
                number: 2345
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 2345
